Bug 5228 : Duplication V3 should fail to start
I have added logic for startup services to notify that a fatal exception has occured and startup 
sequence should be aborted. With such a change, a duplicate V3 will fail to start since ports are
already used.

ran findbugs on few modules.



svn path=/trunk/; revision=21289


Former-commit-id: 9c8486846b80c0721707692de0d40704c95ec4c9